# ToDoListAgent

./: .gitignore  README.md
.claude/: settings.json
.claude/hooks/: log-conversation.js
app/: capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js
app/src/: App.tsx  index.css  main.tsx
app/src/__tests__/: ArrangePanel.test.tsx  CalendarView.test.tsx  InputBar.test.tsx  SettingsPage.test.tsx  StatusBoard.test.tsx  TaskDetailDrawer.test.tsx  TasksPage.test.tsx  (+5 more)
config/: secrets.example.json
docs/: 决策记录.md  进度.md
docs/prototypes/: a2-board-demo-v2.html  a2-board-demo-v3.html  a2-board-demo-v4.html  a2-board-demo-v5.html  a2-board-demo-v6.html  a2-board-demo.html  botanical-style.html  bright-playful-style.html  index.html  midnight-focus-style.html  paper-journal-style.html  swiss-minimal-style.html
server/: alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py  0002_reminder_unique.py
server/app/: agent_registry.py  arrange_slots.py  config.py  db.py  llm_adapter.py  main.py  models.py  notifications.py  parse_utils.py  scheduler.py  schemas.py  secrets_store.py  security.py  url_fetcher.py
server/app/routers/: config_router.py  learning.py  reminders.py  tasks.py
server/tests/: conftest.py  test_agent_registry.py  test_arrange.py  test_arrange_slots.py  test_config_router.py  test_learning.py  test_models.py  test_no_secrets_in_db.py  test_notifications.py  test_parse_utils.py  test_reminders.py  test_scheduler.py  test_secrets_store.py  test_security.py  test_tasks.py
(+63 files in other folders)
